deploy: 2288561c77fab6e3f95e43ff691ff12c8b59b653

--- a/tutorial/sphinx-quickstart.html
+++ b/tutorial/sphinx-quickstart.html
@@ -17,6 +17,7 @@
         <script src="../_static/underscore.js"></script>
         <script src="../_static/doctools.js"></script>
         <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
+        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed-amd.js"></script>
     <script src="../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
@@ -177,6 +178,7 @@ Create a file called “requirements.txt” in <cite>docs/</cite> and copy/paste
 <span class="n">geopandas</span><span class="o">&gt;=</span><span class="mf">0.9.0</span>
 <span class="n">ipython</span>
 <span class="n">ipython_genutils</span>
+<span class="n">ipywidgets</span>
 <span class="n">markupsafe</span><span class="o">==</span><span class="mf">2.0.1</span>
 <span class="n">myst</span><span class="o">-</span><span class="n">parser</span>
 <span class="n">nbsphinx</span>
